fixed align

--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,8 @@ main {
 .label {
   width: 100%;
   height: 100%;
-  align-items: center;
-  min-height: 44px;
   cursor: pointer;
-  padding: 9px 12px 9px 0;
+  padding: 12px 12px 12px 0;
   box-sizing: border-box;
 }
 .container {
